Update to expressjs 3.1.0, mongojs 0.7.1 and angularjs to 1.0.5

--- a/app/partials/phone-form.html
+++ b/app/partials/phone-form.html
@@ -7,6 +7,7 @@
     <p><label>Name:</label> <input type="text" name="phone.name" ng:model="phone.name" /></p>
     <p><label>Snippet:</label> <input type="text" name="phone.snippet" ng:model="phone.snippet" /></p>
     <p><label>Age:</label> <input type="text" name="phone.age" ng:model="phone.age" /></p>
+    <p><label>Teste:</label> <input type="text" name="phone.age" ng:model="phone.teste" /></p>
     <p> 
         <button ng:click="cancel()">Cancel</button>
         <button ng:click="save()">Save</button>
@@ -15,7 +16,7 @@
 
 <hr/>
 Debug View:
-<pre>form={{form}} <br>
+<pre>form={{phone}} <br>
 age={{phone.age}} <br> carrier={{phone.carrier}} <br> _id={{phone._id}}  </pre>
 
   
